Prevent pitch morae from wrapping
This was causing the overline to not display correctly

--- a/src/styling.css
+++ b/src/styling.css
@@ -776,6 +776,7 @@ summary {
 /* Pitch overline */
 .pitch-item>span {
     position: relative;
+    white-space: nowrap;
 }
 
 .pitch-line {
